# pixel-human-labeler

./: .gitignore  LICENSE  README.md  pyproject.toml
resources/characters/: Character_10.png.label.json
src/PixelLabeler/: __init__.py  __main__.py  main.py
src/PixelLabeler/core/: __init__.py  feature_schema.py
src/PixelLabeler/resources/: __init__.py  feature_schema.json
src/PixelLabeler/ui/: __init__.py  main_window.py  sidebar.py
src/PixelLabeler/ui/forms/: __init__.py  dataset_page.ui
src/PixelLabeler/ui/pages/: __init__.py  dataset_page.py  home_page.py  settings_page.py  training_page.py
